--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 			<div class="ip-logo" id="preload">
 				<img src="./img/logo-GL.png" alt="logo Guillaume Lavrilleux" style="max-width: 250px;">
 				<h1>GUILLAUME<br>LAVRILLEUX</h1>
-				<!--<h3>SOUND <strong>DESIGNER</strong></h3>-->
+				<!--<h3>SOUND <strong>DESIGNER</strong></h3>
 				<audio autoplay="true" preload="auto">
 					<source src="./sound/02 - The Dark Side.mp3" type="audio/mpeg" >
-				</audio>	
+				</audio>	-->
 				<div>
 					<br>
 					<p>This website uses sound effects. They are muted by default. You can unmute them by clicking the speaker icon in the top right corner. Make sure to adjust the volume of your computer at a comfortable level.</p>
