--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta name="robots" content="index, follow">
     <meta name="google" content="index, follow">
     <meta name="google-site-verification" content="CTa-ggMxcHYObFajzMMPD7BsjDHCbRo1NyUC8OgEgZ0" />
-    <meta name="description" content="Guillaume Lavrilleux, Audio Designer">
-    <meta name="category" content="Lavrilleux, Audio, Sound, Design, Bordeaux, France">
-    <meta name="keywords" content="Lavrilleux, Audio, Sound, Design, Bordeaux, France">
+    <meta name="description" content="Guillaume Lavrilleux, Sound Designer">
+    <meta name="category" content="Lavrilleux, Audio, Sound, Design, Games, Bordeaux, France">
+    <meta name="keywords" content="Lavrilleux, Audio, Sound, Design, Games, Bordeaux, France">
     <meta name="publisher" content="Arnaud TESSIER, http://www.arnaud-tessier.fr">
 
     <!-- Titre + Favicon -->    
@@ -45,13 +45,13 @@
 	<!-- NAVBAR -->
 	<nav class="topnav navbar navbar-expand-lg fixed-top p-0" id="navbar-spy">
 		<div class="container-fluid p-0">
-			<a class="navbar-brand mb-0 h1 computer" href="#home"><img src="./img/logo-GL-nav2.png" alt="logo Guillaume Lavrilleux" class="mx-4 img-nav"></a>
-			<a class="navbar-brand mb-0 h1 mobile" href="#home"><img src="./img/logo-GL.png" alt="logo Guillaume Lavrilleux" class="mx-4 img-nav-mobile"></a>
+			<a class="navbar-brand mb-0 h1 computer" href="#home"><img src="./img/logo-GL-nav.png" alt="logo Guillaume Lavrilleux" class="mx-4 img-nav"></a>
+			<a class="navbar-brand mb-0 h1 mobile" href="#home"><img src="./img/logo-favicon.png" alt="logo Guillaume Lavrilleux" class="mx-4 img-nav-mobile"></a>
 			<button class="navbar-toggler collapsed px-4 pb-2" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
 				<i class="fas fa-bars"></i>
 			</button>
 			<div class="navbar-collapse collapse" id="navbarColor02" >
-				<ul class="navbar-nav mr-auto mx-auto d-flex justify-content-center align-items-center nav-two">
+				<ul class="navbar-nav d-flex justify-content-center align-items-center nav-two">
 					<li class="nav-item home-nav"><a class="nav-link" href="#home"><svg><rect x="0" y="0" fill="none" width="100%" height="100%"/></svg>Home</a>
 						<audio id="beep-two" preload="auto">
 							<source src="./sound/beep.mp3" controls></source>
@@ -62,6 +62,18 @@
 					<li class="nav-item works-nav"><a class="nav-link" href="#works"><svg><rect x="0" y="0" fill="none" width="100%" height="100%"/></svg>Works</a></li>
 					<li class="nav-item contact-nav"><a class="nav-link" href="#contact"><svg><rect x="0" y="0" fill="none" width="100%" height="100%"/></svg>Contact</a></li>
 				</ul>
+			</div>
+			<div class="social-nav">
+				<ul>
+					<li><a href="https://twitter.com/GLavrilleux" target="_blank"> <i type="button" data-toggle="tooltip" data-placement="bottom" title="Twitter" class="fa fa-twitter"></i></a></li>
+					<li><a href="https://fr.linkedin.com/in/guillaumelavrilleux" target="_blank"> <i type="button" data-toggle="tooltip" data-placement="bottom" title="LinkedIn" class="fa fa-linkedin"></i></a></li>
+					<li><a href="https://vimeo.com/lavrilleuxguillaume" target="_blank"> <i type="button" data-toggle="tooltip" data-placement="bottom" title="Vimeo" class="fab fa-vimeo-v"></i></a></li>
+				</ul>
+			</div>
+			<div id="sound-button">
+				<div class="unmuted toggle-sound" type="button" data-toggle="tooltip" data-placement="left" title="Mute/Unmute sounds" >
+					<i class="fas fa-volume-mute"></i>
+				</div>
 			</div>
 		</div>
 	</nav>
@@ -79,11 +91,7 @@
 			<div class="ip-logo" id="preload">
 				<img src="./img/logo-GL.png" alt="logo Guillaume Lavrilleux" style="max-width: 250px;">
 				<h1>GUILLAUME<br>LAVRILLEUX</h1>
-				<!--<h3>SOUND <strong>DESIGNER</strong></h3>
-				<audio autoplay="true" preload="auto">
-					<source src="./sound/02 - The Dark Side.mp3" type="audio/mpeg" >
-				</audio>	-->
-				<div>
+				<div class="info-sound">
 					<br>
 					<p>This website uses sound effects. They are muted by default. You can unmute them by clicking the speaker icon in the top right corner. Make sure to adjust the volume of your computer at a comfortable level.</p>
 					<br>
@@ -103,11 +111,6 @@
 		<!-- HOME -->
 		<section id="home">
 			<div class="home-box">
-				<div id="sound-button">
-					<div class="unmuted toggle-sound" type="button" data-toggle="tooltip" data-placement="left" title="Mute/Unmute sounds" >
-						<i class="fas fa-volume-up"></i>
-					</div>
-				</div>
 				<div class="title">
 					<h2>Guillaume Lavrilleux</h2>
 					<div class="divider"></div>
@@ -126,12 +129,20 @@
 				</div>
 				<div class="video">
 					<h2>Demo Reel</h2>
-					<video controls controlsList="nodownload" disablePictureInPicture width="900px">				
-						<source src="./video/Guillaume Lavrilleux - Demo Reel 2020 - Sound ReDesign.mp4"
-								type="video/mp4">
-					
-						Sorry, your browser doesn't support embedded videos.
-					</video>				
+					<div class="container-fluid" style="max-width: 900px; object-fit: contain;object-position: 50% 50%;">
+						<div style="padding:56.25% 0 0 0;position:relative;">
+							<iframe 
+								src="https://player.vimeo.com/video/414779331?color=fc7420&title=0&byline=0&portrait=0"
+								style="position:absolute;top:0;left:0;width:100%;height:100%;"
+								frameborder="0"
+								importance="high"
+								object-fit="contain"
+								object-position="50% 50%"
+								allow="autoplay; fullscreen"
+								allowfullscreen>
+							</iframe>
+						</div>
+					</div>			
 				</div>
 			</div>
 		</section>
@@ -142,7 +153,7 @@
 		<!-- END SOUNDWAVE-->
 
 		
-		<!-- SOCIAL NETWORK -->
+		<!-- SOCIAL NETWORK 
 		<aside id="social"> 
 			<div class="social">
 				<ul>
@@ -152,7 +163,7 @@
 				</ul>
 			</div>
 		</aside>
-		<!-- END SOCIAL NETWORK -->
+		END SOCIAL NETWORK -->
 
 
 		<!-- ABOUT -->
@@ -166,29 +177,16 @@
 					<div class="col-xl-6 d-flex justify-content-center align-items-center m-4" data-aos="fade-up-left" data-aos-duration="1500">
 						<div class="d-block coach-desc p-5">
 							<h2 class="title-part">Guillaume LAVRILLEUX</h2>
-							<br><br>
+							<br>
 							<h3>Sound Designer</h3>
-							<h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, corporis.</h3>
-							<br><br>
-							<h4>lorem</h4>
-							<ul>
-								<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio culpa eius quibusdam aspernatur quidem accusamus?</li>
-								<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio fuga molestias explicabo et autem pariatur!</li>
-							</ul>
+							<h3><em>Bordeaux, FRANCE</em></h3>
 							<br>
-							<h4>lorem</h4>
-							<ul>
-								<li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias veritatis eos adipisci cum ducimus optio!</li>
-								<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum nobis excepturi tempore est ipsum cum.</li>
-							</ul>
-							<br>
-							<h4>lorem</h4>
-							<ul>
-								<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, harum.</li>
-								<li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, fugit!</li>
-							</ul>
-							<br>
-							<div class="d-flex flex-row justify-content-center align-items-center mt-3">
+							<p>Hello! I’m Guillaume, a sound designer based in Bordeaux, France. I specialize in video games and interactive experiences. Former musician, it is thanks to the use of synthesizers that I ended up getting interested more in sound textures than in music.</p>
+							<p>I started by participating in game jams and then spent 2 years working on VR audio at Lucine in Bordeaux. It allowed me to work with 2D & 3D modelers, UX designers, UI designers, and various programers : from gameplay prog, technical artists, to machine learning developers. It helped a lot to improve my work, and also confirmed that every aspect of creating a video game, or an interactive experience will have an impact on the audio. </p>
+							<p>Designing audio environments is like telling a story. I try to make people feel emotions through sounds, while also giving a strong knowledge of what’s going on in their experience. Making sure they receive the right feedback at the right time.</p>
+							<p>Working on those aspects require creative and technical skills, and I like to express them with tools such as Reaper and Ableton Live. On the technical part, I can use both Fmod and Wwise, before getting my hands into game engines. I also do a bit of coding so I can smoothly work with fellow programmers.</p>
+							<p>Beside that I am also part of a game audio collective that I co-founded with fellow sound designers which is called Game Audio France (GAFR, pun intended). We started as 4 people early 2017 and we are now one of the biggest french game audio collective doing monthly meet up and sharing knowledge. I am also a modular synthesizer and tea enthusiast!</p>
+							<div class="d-flex flex-row justify-content-center align-items-center">
 								<a href="https://twitter.com/GLavrilleux" target="_blank"><i class="fab fa-twitter"></i></a>
 								<a href="https://fr.linkedin.com/in/guillaumelavrilleux" target="_blank"><i class="fab fa-linkedin-in"></i></a>
 								<a href="https://vimeo.com/lavrilleuxguillaume" target="_blank"><i class="fab fa-vimeo-v"></i></a>
@@ -218,25 +216,30 @@
 				</ol>
 				<div class="carousel-inner">
 				  <div class="carousel-item active">
-					<img src="./img/home-portrait-arnaud-tessier.jpg" class="d-block img-fluid" alt="...">
+					<img src="./img/Lucine.png" class="d-block img-fluid" alt="Lucine">
 					<div class="carousel-caption d-none d-md-block">
-					  <h5>First slide label</h5>
-					  <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+					  <h5>Lucine</h5>
+					  <p>VR audio
+						  <br>
+					  2018 - 2019</p>
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img src="./img/logo-AT.png" class="d-block img-fluid" alt="...">
+					<img src="./img/Cap-Sciences.png" class="d-block img-fluid" alt="Cap Sciences">
 					<div class="carousel-caption d-none d-md-block">
-					  <h5>Second slide label</h5>
-					  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+					  <h5>Cap Sciences</h5>
+					  <p>TV show and smartphone app
+						<br>
+					2020</p>
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img src="./img/portrait-hugo.jpg" class="d-block img-fluid" alt="...">
+					<img src="./img/eduMedia.png" class="d-block img-fluid" alt="eduMedia">
 					<div class="carousel-caption d-none d-md-block">
-					  <h5>Third slide label</h5>
-					  <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-					</div>
+						<h5>eduMedia</h5>
+						<p>Educationnal games
+						  <br>
+					  2020</p>
 				  </div>
 				</div>
 				<a class="carousel-control-prev" href="#carouselWorks" role="button" data-slide="prev">
@@ -244,7 +247,6 @@
 				</a>
 				<a class="carousel-control-next" href="#carouselWorks" role="button" data-slide="next">
 				  <span aria-hidden="true"><i class="fas fa-step-forward"></i></span>
-				  <span class="sr-only">Next</span>
 				</a>
 			</div>
 			</div>
@@ -284,20 +286,8 @@
 				</div>
 				<div class="header">
 				  <h2>
-					Contact me to start your next project! 
+					Contact me to talk about your next project! 
 				  </h2>
-				</div>
-				<div class="address">
-				  <i class="fas fa-map-marker-alt"></i>
-				  <h3>
-					Bordeaux
-				  </h3>
-				</div>
-				<div class="email">
-				  <i class="fas fa-envelope"></i>
-				  <h3>
-					<a href="mailto:lavrilleuxguillaume@gmail.com" class="mail">lavrilleuxguillaume@gmail.com</a>
-				  </h3>
 				</div>
 				<div class="network">
 					<i class="fas fa-user-plus"></i>
@@ -348,13 +338,10 @@
 				<div class="pb-3">					
 					<a href="#home">Home</a> | <a href="#about">About</a> | <a href="#works">Works</a> | <a href="#contact">Contact</a>
 				</div>
-				<div class="pb-3">
-					<a href="mailto:lavrilleuxguillaume@gmail.com"><i type="button" class="fas fa-at" data-toggle="tooltip" data-placement="left" title="lavrilleuxguillaume@gmail.com"></i></a>
-				</div>
 				<div>
-					<a href="https://twitter.com/GLavrilleux" target="_blank" rel="external nofollow noreferrer noopener">Twitter</a>
-					<a href="https://fr.linkedin.com/in/guillaumelavrilleux" target="_blank" rel="external nofollow noreferrer noopener">LinkedIn</a>
-					<a href="https://vimeo.com/lavrilleuxguillaume" target="_blank" rel="external nofollow noreferrer noopener">Vimeo</a>
+					<a href="https://twitter.com/GLavrilleux" target="_blank" rel="external nofollow noreferrer noopener"><i class="fab fa-twitter"></i></a>
+					<a href="https://fr.linkedin.com/in/guillaumelavrilleux" target="_blank" rel="external nofollow noreferrer noopener"><i class="fab fa-linkedin-in"></i></a>
+					<a href="https://vimeo.com/lavrilleuxguillaume" target="_blank" rel="external nofollow noreferrer noopener"><i class="fab fa-vimeo-v"></i></a>
 				</div>
 			</div>
 			<div class="copyright">
@@ -381,7 +368,8 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js"></script>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js"></script>		
+		<script src="https://player.vimeo.com/api/player.js"></script>
 		<script src="js/modernizr.custom.js"></script>
 		<script src="js/classie.js"></script>		
 		<script src="js/wave.js"></script>
