--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		<section id="home">
 			<div class="home-box">
 				<div class="title">
-					<h2>Guillaume Lavrilleux</h2>
+					<h2>Guillaume<br>Lavrilleux</h2>
 					<div class="divider"></div>
 					<div class="description">
 						<p>I'm a freelance sound designer for video games and other media.</p>
