--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				</ul>
 			</div>
 			<div id="sound-button">
-				<div class="unmuted toggle-sound" type="button" data-toggle="tooltip" data-placement="left" title="Mute/Unmute sounds" >
+				<div class="unmuted toggle-sound" type="button" data-toggle="tooltip" data-placement="bottom" data-offset="-50px" title="Mute/Unmute sounds" >
 					<i class="fas fa-volume-mute"></i>
 				</div>
 			</div>
