--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-compatible" content="IE=edge, chrome=1">
     <meta name="viewport" content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no' name='viewport'/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="copyright" content="Guillaume Lavrilleux, http://www.guillaume-lavrilleux.com/">
+    <meta name="copyright" content="Guillaume Lavrilleux, https://www.guillaumelavrilleux.com/">
     <meta name="geo.placename" content="Bordeaux, Gironde">    
     <meta name="robots" content="index, follow">
     <meta name="google" content="index, follow">
@@ -26,7 +26,6 @@
 
     <!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
 	<!-- CSS -->
@@ -53,11 +52,14 @@
 			<div class="navbar-collapse collapse" id="navbarColor02" >
 				<ul class="navbar-nav d-flex justify-content-center align-items-center nav-two">
 					<li class="nav-item home-nav"><a class="nav-link" href="#home"><svg><rect x="0" y="0" fill="none" width="100%" height="100%"/></svg>Home</a>
+						<!--
 						<audio id="beep-two" preload="auto">
 							<source src="./sound/beep.mp3" controls></source>
 							<source src="./sound/beep.ogg" controls></source>
 							Your browser isn't invited for super fun time.
-						</audio></li>
+						</audio>
+						-->
+					</li>
 					<li class="nav-item about-nav"><a class="nav-link" href="#about"><svg><rect x="0" y="0" fill="none" width="100%" height="100%"/></svg>About</a></li>
 					<li class="nav-item works-nav"><a class="nav-link" href="#works"><svg><rect x="0" y="0" fill="none" width="100%" height="100%"/></svg>Works</a></li>
 					<li class="nav-item contact-nav"><a class="nav-link" href="#contact"><svg><rect x="0" y="0" fill="none" width="100%" height="100%"/></svg>Contact</a></li>
@@ -70,11 +72,13 @@
 					<li><a href="https://vimeo.com/lavrilleuxguillaume" target="_blank"> <i type="button" data-toggle="tooltip" data-placement="bottom" title="Vimeo" class="fab fa-vimeo-v"></i></a></li>
 				</ul>
 			</div>
+			<!--
 			<div id="sound-button">
 				<div class="unmuted toggle-sound" type="button" data-toggle="tooltip" data-placement="bottom" data-offset="-50px" title="Mute/Unmute sounds" >
 					<i class="fas fa-volume-mute"></i>
 				</div>
 			</div>
+			-->
 		</div>
 	</nav>
 	<!-- END NAVBAR -->
@@ -91,12 +95,14 @@
 			<div class="ip-logo" id="preload">
 				<img src="./img/logo-GL.png" alt="logo Guillaume Lavrilleux" style="max-width: 250px;">
 				<h1>GUILLAUME<br>LAVRILLEUX</h1>
+				<!--
 				<div class="info-sound">
 					<br>
 					<p>This website uses sound effects. They are muted by default. You can unmute them by clicking the speaker icon in the top right corner. Make sure to adjust the volume of your computer at a comfortable level.</p>
 					<br>
 					<p>Ce site utilise des effets sonores. Ils sont désactivés par défaut. Vous pouvez les activer en cliquant sur l'icône de haut-parleur en haut à droite de l'écran. Attention à ajuster le volume sonore de votre ordinateur à un niveau raisonnable.</p>
 				</div>			  
+				-->
 			</div>
 			<div class="ip-loader">
 				<svg class="ip-inner" width="60px" height="60px" viewBox="0 0 80 80">
@@ -115,7 +121,7 @@
 					<h2>Guillaume<br>Lavrilleux</h2>
 					<div class="divider"></div>
 					<div class="description">
-						<p>I'm a freelance sound designer for video games and other media.</p>
+						<p>Welcome here! I'm a freelance sound designer for video games and interactive experiences.</p>
 					</div>
 					<div class="button-contact">
 						<a href="#contact">
@@ -152,35 +158,18 @@
 		<section id="wavebg1" class="content content--highlight flexy flexy--center"></section>
 		<!-- END SOUNDWAVE-->
 
-		
-		<!-- SOCIAL NETWORK 
-		<aside id="social"> 
-			<div class="social">
-				<ul>
-					<li><a href="https://twitter.com/GLavrilleux" target="_blank">Twitter <i class="fa fa-twitter"></i></a></li>
-					<li><a href="https://fr.linkedin.com/in/guillaumelavrilleux" target="_blank">Linkedin <i class="fa fa-linkedin"></i></a></li>
-					<li><a href="https://vimeo.com/lavrilleuxguillaume" target="_blank">Vimeo <i class="fab fa-vimeo-v"></i></a></li>
-				</ul>
-			</div>
-		</aside>
-		END SOCIAL NETWORK -->
-
-
 		<!-- ABOUT -->
 		<section id="about">			
 			<h2 class="d-block text-align-center">About Me</h2>
 			<div class="row gap-y mb-5" >
 				<div class="d-flex justify-content-center align-items-center w-100 md-column">
+					<!--
 					<div class="col-xl-4 d-flex justify-content-center align-items-center" data-aos="flip-left">
-						<img class="d-block coach-img m-auto" src="./img/home-portrait-arnaud-tessier.jpg" alt="Photo de Guillaume Lavrilleux">
+						<img class="d-block portrait m-auto" src="" alt="Photo de Guillaume Lavrilleux">
 					</div>
-					<div class="col-xl-6 d-flex justify-content-center align-items-center m-4" data-aos="fade-up-left" data-aos-duration="1500">
-						<div class="d-block coach-desc p-5">
-							<h2 class="title-part">Guillaume LAVRILLEUX</h2>
-							<br>
-							<h3>Sound Designer</h3>
-							<h3><em>Bordeaux, FRANCE</em></h3>
-							<br>
+					-->
+					<div class="col-xl-6 d-flex justify-content-center align-items-center m-4" data-aos="flip-left" data-aos-duration="1500">
+						<div class="d-block description p-5">
 							<p>Hello! I’m Guillaume, a sound designer based in Bordeaux, France. I specialize in video games and interactive experiences. Former musician, it is thanks to the use of synthesizers that I ended up getting interested more in sound textures than in music.</p>
 							<p>I started by participating in game jams and then spent 2 years working on VR audio at Lucine in Bordeaux. It allowed me to work with 2D & 3D modelers, UX designers, UI designers, and various programers : from gameplay prog, technical artists, to machine learning developers. It helped a lot to improve my work, and also confirmed that every aspect of creating a video game, or an interactive experience will have an impact on the audio. </p>
 							<p>Designing audio environments is like telling a story. I try to make people feel emotions through sounds, while also giving a strong knowledge of what’s going on in their experience. Making sure they receive the right feedback at the right time.</p>
@@ -206,7 +195,7 @@
 
 		<!-- WORKS -->
 		<section id="works">
-			<h2>My Works</h2>
+			<h2>Works</h2>
 			<div class="carousel-block" data-aos="zoom-in">
 			<div id="carouselWorks" class="carousel slide" data-ride="carousel">
 				<ol class="carousel-indicators">
@@ -214,6 +203,12 @@
 				  <li data-target="#carouselWorks" data-slide-to="1"></li>
 				  <li data-target="#carouselWorks" data-slide-to="2"></li>
 				</ol>
+				<a class="carousel-control-prev" href="#carouselWorks" role="button" data-slide="prev">
+					<span aria-hidden="true"><i class="fas fa-step-backward"></i></span>
+				  </a>
+				  <a class="carousel-control-next" href="#carouselWorks" role="button" data-slide="next">
+					<span aria-hidden="true"><i class="fas fa-step-forward"></i></span>
+				  </a>
 				<div class="carousel-inner">
 				  <div class="carousel-item active">
 					<img src="./img/Lucine.png" class="d-block img-fluid" alt="Lucine">
@@ -242,12 +237,6 @@
 					  2020</p>
 				  </div>
 				</div>
-				<a class="carousel-control-prev" href="#carouselWorks" role="button" data-slide="prev">
-				  <span aria-hidden="true"><i class="fas fa-step-backward"></i></span>
-				</a>
-				<a class="carousel-control-next" href="#carouselWorks" role="button" data-slide="next">
-				  <span aria-hidden="true"><i class="fas fa-step-forward"></i></span>
-				</a>
 			</div>
 			</div>
 		</section>
@@ -261,41 +250,13 @@
 
 		<!-- CONTACT -->
 		<section id="contact">
-		<div class="container pt-4 pb-5 mb-5" data-aos="zoom-in">
+		<div class="container pt-4 mb-4" data-aos="zoom-in">
 			<h2 class="title-part">Contact Me</h2>
 			<div class="contact-form-container">
-				<div class="contact-me">
-				  <div class="contact-header">
-					<h2>
-					  &#9135;&#9135;&#9135;&#9135;&nbsp;&nbsp;FOLLOW ME
-					</h2>
-				  </div>
-				  <div class="social-bar">
-					<ul>
-					  <li>
-						<a href="https://twitter.com/GLavrilleux" target="_blank"><i class="fab fa-twitter"></i></a>
-					  </li>
-					  <li>
-						<a href="https://fr.linkedin.com/in/guillaumelavrilleux" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-					  </li>
-					  <li>
-						<a href="https://vimeo.com/lavrilleuxguillaume" target="_blank"><i class="fab fa-vimeo-v"></i></a>
-					  </li>
-					</ul>
-				  </div>
-				</div>
 				<div class="header">
 				  <h2>
 					Contact me to talk about your next project! 
 				  </h2>
-				</div>
-				<div class="network">
-					<i class="fas fa-user-plus"></i>
-					<div class="net-flex">
-						<a href="https://twitter.com/GLavrilleux" target="_blank"><i class="fab fa-twitter"></i></a>
-						<a href="https://fr.linkedin.com/in/guillaumelavrilleux" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-						<a href="https://vimeo.com/lavrilleuxguillaume" target="_blank"><i class="fab fa-vimeo-v"></i></a>
-					</div>
 				</div>
 				<div class="contact-form">
 				  <form id="contact-form">
@@ -307,6 +268,26 @@
 					</div>
 				  </form>
 				</div>
+				<div class="contact-me">
+					<div class="contact-header">
+					  <h2>
+						&#9135;&#9135;&#9135;&#9135;&nbsp;&nbsp;FOLLOW ME
+					  </h2>
+					</div>
+					<div class="social-bar">
+					  <ul>
+						<li>
+						  <a href="https://twitter.com/GLavrilleux" target="_blank"><i class="fab fa-twitter"></i></a>
+						</li>
+						<li>
+						  <a href="https://fr.linkedin.com/in/guillaumelavrilleux" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+						</li>
+						<li>
+						  <a href="https://vimeo.com/lavrilleuxguillaume" target="_blank"><i class="fab fa-vimeo-v"></i></a>
+						</li>
+					  </ul>
+					</div>
+				  </div>
 			  </div>
 		</div>
 		</section>
@@ -345,7 +326,7 @@
 				</div>
 			</div>
 			<div class="copyright">
-				<p>© 2020 - www.guillaume-lavrilleux.com - Sound Designer | Made by : <a href="https://www.arnaud-tessier.fr" target="_blank" class="dev">Arnaud Tessier<img class="dev-img" src="./img/logo-AT-mini.png" alt="Arnaud Tessier"></a></p>
+				<p>© 2020 - www.guillaumelavrilleux.com - Sound Designer | Made by : <a href="https://www.arnaud-tessier.fr" target="_blank" class="dev">Arnaud Tessier<img class="dev-img" src="./img/logo-AT-mini.png" alt="Arnaud Tessier"></a></p>
 			</div>
 		</div>
 		</footer>
