--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					<h2>Guillaume<br>Lavrilleux</h2>
 					<div class="divider"></div>
 					<div class="description">
-						<p>Welcome here! I'm a freelance sound designer for video games and interactive experiences.</p>
+						<p>Sound designer for video games and interactive experiences.</p>
 					</div>
 					<div class="button-contact">
 						<a href="#contact">
@@ -168,7 +168,7 @@
 						<img class="d-block portrait m-auto" src="" alt="Photo de Guillaume Lavrilleux">
 					</div>
 					-->
-					<div class="col-xl-6 d-flex justify-content-center align-items-center m-4" data-aos="flip-left" data-aos-duration="1500">
+					<div class="col-xl-6 d-flex justify-content-center align-items-center m-4" data-aos="flip-left" data-aos-duration="1500" style="max-width: 800px">
 						<div class="d-block description p-5">
 							<p>Hello! I’m Guillaume, a sound designer based in Bordeaux, France. I specialize in video games and interactive experiences. Former musician, it is thanks to the use of synthesizers that I ended up getting interested more in sound textures than in music.</p>
 							<p>I started by participating in game jams and then spent 2 years working on VR audio at Lucine in Bordeaux. It allowed me to work with 2D & 3D modelers, UX designers, UI designers, and various programers : from gameplay prog, technical artists, to machine learning developers. It helped a lot to improve my work, and also confirmed that every aspect of creating a video game, or an interactive experience will have an impact on the audio. </p>
@@ -228,9 +228,12 @@
 					2020</p>
 					</div>
 				  </div>
-				  <div class="carousel-item">
-					<img src="./img/eduMedia.png" class="d-block img-fluid" alt="eduMedia">
-					<div class="carousel-caption d-none d-md-block">
+				  <div class="carousel-item paysage">
+					<div style="height: 373px">
+						<img src="./img/eduMedia.png" class="d-block img-fluid" alt="eduMedia">
+						<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias nemo reprehenderit expedita doloribus amet! Obcaecati nostrum officiis a, sunt facilis dolorem quaerat tempore id, architecto, perferendis enim quisquam repudiandae quas minus libero corrupti esse unde tempora pariatur! Neque, doloremque quo? Voluptatem aspernatur mollitia ullam consectetur maxime explicabo sint iste alias?</p>
+					</div>
+					<div class="title d-none d-md-block">
 						<h5>eduMedia</h5>
 						<p>Educationnal games
 						  <br>
