--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 							<p>Designing audio environments is like telling a story. I try to make people feel emotions through sounds, while also giving a strong knowledge of what’s going on in their experience. Making sure they receive the right feedback at the right time.</p>
 							<p>Working on those aspects require creative and technical skills, and I like to express them with tools such as Reaper and Ableton Live. On the technical part, I can use both Fmod and Wwise, before getting my hands into game engines. I also do a bit of coding so I can smoothly work with fellow programmers.</p>
 							<p>Beside that I am also part of a game audio collective that I co-founded with fellow sound designers which is called Game Audio France (GAFR, pun intended). We started as 4 people early 2017 and we are now one of the biggest french game audio collective doing monthly meet up and sharing knowledge. I am also a modular synthesizer and tea enthusiast!</p>
+							<img src="./img/logo-GL-nav.png" alt="logo Guillaume Lavrilleux">
 							<div class="d-flex flex-row justify-content-center align-items-center">
 								<a href="https://twitter.com/GLavrilleux" target="_blank"><i class="fab fa-twitter"></i></a>
 								<a href="https://fr.linkedin.com/in/guillaumelavrilleux" target="_blank"><i class="fab fa-linkedin-in"></i></a>
