--- a/index.html
+++ b/index.html
@@ -212,18 +212,35 @@
 				  </a>
 				<div class="carousel-inner">
 				  <div class="carousel-item active">
-					<img src="./img/Lucine.png" class="d-block img-fluid" alt="Lucine">
+					  <div class="d-flex flex-row orientation">
+						<img src="./img/Lucine.png" class="d-block img-fluid" alt="Lucine">
+						<p class="lucine">Lucine aims to help people who suffer from chronic pain with audio and
+						visual stimulations.
+						My work at Lucine consisted of designing audio environment
+						for different VR platforms:
+						Samsung Gear, HTC Vive, Oculus Rift and Oculus Quest.
+						I had to handle the audio artistic direction in collaboration 
+						with the visual artists. I also had the chance to work 
+						with researchers (neuroscientists, anthropologist, psychologists)
+						to target specific audio stimulations to use.</p>
+					   </div>
 					<div class="carousel-caption d-none d-md-block">
-					  <h5>Lucine</h5>
+					  <h5><a href="https://lucine.fr/" target="_blank">Lucine (under NDA)</a></h5>
 					  <p>VR audio
 						  <br>
 					  2018 - 2019</p>
 					</div>
 				  </div>
 				  <div class="carousel-item">
-					<img src="./img/Cap-Sciences.png" class="d-block img-fluid" alt="Cap Sciences">
+					<div class="d-flex flex-row orientation">
+						<img src="./img/Cap-Sciences.png" class="d-block img-fluid" alt="Cap Sciences">
+						<p class="capsciences">Défi Curieux! is an interactive experience that took place in Bordeaux, France, 
+						at Cap Sciences. The experience is a mix between a TV show and a mobile app.
+						Users interact through a mobile phone to play a competitive game. The game needed
+						musical ambient loops, jingles and UI SFX to make it feel more immersive and real.</p>
+					</div>
 					<div class="carousel-caption d-none d-md-block">
-					  <h5>Cap Sciences</h5>
+					  <h5><a href="https://www.cap-sciences.net/sites/default/files/kcfinder/files/dp_expo_chiens-et-chats_25062020.pdf" target="_blank">Défi Curieux! - Cap Sciences</a></h5>
 					  <p>TV show and smartphone app
 						<br>
 					2020</p>
@@ -232,10 +249,12 @@
 				  <div class="carousel-item paysage">
 					<div style="height: 373px">
 						<img src="./img/eduMedia.png" class="d-block img-fluid" alt="eduMedia">
-						<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias nemo reprehenderit expedita doloribus amet! Obcaecati nostrum officiis a, sunt facilis dolorem quaerat tempore id, architecto, perferendis enim quisquam repudiandae quas minus libero corrupti esse unde tempora pariatur! Neque, doloremque quo? Voluptatem aspernatur mollitia ullam consectetur maxime explicabo sint iste alias?</p>
+						<p class="description">Alec is an instructional video game, played on web browers, for PC and tablets.
+							I worked under the supervision of their team and artistic director to create
+							ambients, SFX and record foleys.</p>
 					</div>
 					<div class="title d-none d-md-block">
-						<h5>eduMedia</h5>
+						<h5><a href="https://alec-edu.com/" target="_blank">Alec - EduMedia Sciences</a></h5>
 						<p>Educationnal games
 						  <br>
 					  2020</p>
