--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 					<div class="col-xl-6 d-flex justify-content-center align-items-center m-3" data-aos="flip-left" data-aos-duration="1500" style="max-width: 825px">
 						<div class="d-block description p-4">
 							<p>Hello! I’m Guillaume, a sound designer based in Bordeaux, France. I specialize in video games and interactive experiences. Former musician, it is thanks to the use of synthesizers that I ended up getting interested more in sound textures than in music.</p>
-							<p>I started by participating in game jams and then spent 2 years working on VR audio at Lucine in Bordeaux. It allowed me to work with 2D artist, 3D modelers, UX designers, UI designers, and various programmers : from gameplay prog, technical artists, to machine learning developers. It helped a lot to improve my work, and also confirmed that every aspect of creating a video game, or an interactive experience will have an impact on the audio. </p>
+							<p>I started by participating in game jams and then spent 2 years working on VR audio at Lucine in Bordeaux. It allowed me to work with 2D artists, 3D modelers, UX designers, UI designers, and various programmers : from gameplay prog, technical artists, to machine learning developers. It helped a lot to improve my work, and also confirmed that every aspect of creating a video game, or an interactive experience will have an impact on the audio. </p>
 							<p>Designing audio environments is like telling a story. I try to make people feel emotions through sounds, while also giving a strong knowledge of what’s going on in their experience. Making sure they receive the right feedback at the right time.</p>
 							<p>Working on those aspects require creative and technical skills, and I like to express them with tools such as Reaper and Ableton Live. On the technical part, I can use both Fmod and Wwise, before getting my hands into game engines. I also do a bit of coding so I can smoothly work with fellow programmers.</p>
 							<p>Beside that I am also part of a game audio collective that I co-founded with fellow sound designers which is called Game Audio France (GAFR, pun intended). We started as 4 people early 2017 and we are now one of the biggest french game audio collective doing monthly meet up and sharing knowledge. I am also a modular synthesizer and tea enthusiast!</p>
@@ -213,7 +213,7 @@
 				<div class="carousel-inner">
 				  <div class="carousel-item active">
 					  <div class="d-flex flex-row orientation">
-						<img src="./img/Lucine.png" class="d-block img-fluid" alt="Lucine">
+						<img src="./img/LaGuig.png" class="d-block img-fluid img-luc" alt="Lucine">
 						<p class="lucine">Lucine aims to help people who suffer from chronic pain with audio and
 						visual stimulations.
 						My work at Lucine consisted of designing audio environment
@@ -224,7 +224,7 @@
 						with researchers (neuroscientists, anthropologist, psychologists)
 						to target specific audio stimulations to use.</p>
 					   </div>
-					<div class="carousel-caption d-none d-md-block">
+					<div class="carousel-caption caption-right d-none d-md-block">
 					  <h5><a href="https://lucine.fr/" target="_blank">Lucine (under NDA)</a></h5>
 					  <p>VR audio
 						  <br>
@@ -233,13 +233,13 @@
 				  </div>
 				  <div class="carousel-item">
 					<div class="d-flex flex-row orientation">
-						<img src="./img/Cap-Sciences.png" class="d-block img-fluid" alt="Cap Sciences">
+						<img src="./img/Cap-Sciences.png" class="d-block img-fluid img-cap" alt="Cap Sciences">
 						<p class="capsciences">Défi Curieux! is an interactive experience that took place in Bordeaux, France, 
 						at Cap Sciences. The experience is a mix between a TV show and a mobile app.
 						Users interact through a mobile phone to play a competitive game. The game needed
-						musical ambient loops, jingles and UI SFX to make it feel more immersive and real.</p>
+						musical ambient loops, jingles and UI SFX to make it feel more immersive.</p>
 					</div>
-					<div class="carousel-caption d-none d-md-block">
+					<div class="carousel-caption caption-right d-none d-md-block">
 					  <h5><a href="https://www.cap-sciences.net/sites/default/files/kcfinder/files/dp_expo_chiens-et-chats_25062020.pdf" target="_blank">Défi Curieux! - Cap Sciences</a></h5>
 					  <p>TV show and smartphone app
 						<br>
@@ -249,13 +249,13 @@
 				  <div class="carousel-item paysage">
 					<div style="height: 373px">
 						<img src="./img/eduMedia.png" class="d-block img-fluid" alt="eduMedia">
-						<p class="description">Alec is an instructional video game, played on web browers, for PC and tablets.
+						<p class="description">Alec is an educational video game, played on web browers, for PC and tablets.
 							I worked under the supervision of their team and artistic director to create
 							ambients, SFX and record foleys.</p>
 					</div>
 					<div class="title d-none d-md-block">
 						<h5><a href="https://alec-edu.com/" target="_blank">Alec - EduMedia Sciences</a></h5>
-						<p>Educationnal games
+						<p>Educational games
 						  <br>
 					  2020</p>
 				  </div>
