--- a/index.html
+++ b/index.html
@@ -224,11 +224,14 @@
 						with researchers (neuroscientists, anthropologist, psychologists)
 						to target specific audio stimulations to use.</p>
 					   </div>
+					   <div style="max-width: 50%;">
 					<div class="carousel-caption caption-right d-none d-md-block">
-					  <h5><a href="https://lucine.fr/" target="_blank">Lucine (under NDA)</a></h5>
-					  <p>VR audio
+					  
+						  <h5><a href="https://lucine.fr/" target="_blank">Lucine (under NDA)</a></h5>
+					  	   <p>VR audio
 						  <br>
 					  2018 - 2019</p>
+					  </div>
 					</div>
 				  </div>
 				  <div class="carousel-item">
