--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 				<div class="carousel-inner">
 				  <div class="carousel-item active">
 					  <div class="d-flex flex-row orientation">
-						<img src="./img/LaGuig.png" class="d-block img-fluid img-luc" alt="Lucine">
+						<img src="./img/Lucine.png" class="d-block img-fluid img-luc" alt="Lucine">
 						<p class="lucine">Lucine aims to help people who suffer from chronic pain with audio and
 						visual stimulations.
 						My work at Lucine consisted of designing audio environment
