--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="publisher" content="Arnaud TESSIER, http://www.arnaud-tessier.fr">
 
     <!-- Titre + Favicon -->    
-    <link rel="icon" type="image/png" href="./img/logo-favicon.png">    
+    <link rel="icon" type="image/png" href="./img/logo-favicon.webp">    
 	<title>Guillaume Lavrilleux | Sound Designer</title>
 
     <!-- Fontawesome -->
@@ -44,8 +44,8 @@
 	<!-- NAVBAR -->
 	<nav class="topnav navbar navbar-expand-lg fixed-top p-0" id="navbar-spy">
 		<div class="container-fluid p-0">
-			<a class="navbar-brand mb-0 h1 computer" href="#home"><img src="./img/logo-GL-nav.png" alt="logo Guillaume Lavrilleux" class="mx-4 img-nav"></a>
-			<a class="navbar-brand mb-0 h1 mobile" href="#home"><img src="./img/logo-favicon.png" alt="logo Guillaume Lavrilleux" class="mx-4 img-nav-mobile"></a>
+			<a class="navbar-brand mb-0 h1 computer" href="#home"><img src="./img/logo-GL-nav.webp" alt="logo Guillaume Lavrilleux" class="mx-4 img-nav"></a>
+			<a class="navbar-brand mb-0 h1 mobile" href="#home"><img src="./img/logo-favicon.webp" alt="logo Guillaume Lavrilleux" class="mx-4 img-nav-mobile"></a>
 			<button class="navbar-toggler collapsed px-4 pb-2" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
 				<i class="fas fa-bars"></i>
 			</button>
@@ -93,7 +93,7 @@
 		<!-- PRELOADER -->
 		<header class="ip-header">
 			<div class="ip-logo" id="preload">
-				<img src="./img/logo-GL.png" alt="logo Guillaume Lavrilleux" style="max-width: 250px;">
+				<img src="./img/logo-GL.webp" alt="logo Guillaume Lavrilleux" style="max-width: 250px;">
 				<h1>GUILLAUME<br>LAVRILLEUX</h1>
 				<!--
 				<div class="info-sound">
@@ -175,7 +175,7 @@
 							<p>Designing audio environments is like telling a story. I try to make people feel emotions through sounds, while also giving a strong knowledge of what’s going on in their experience. Making sure they receive the right feedback at the right time.</p>
 							<p>Working on those aspects require creative and technical skills, and I like to express them with tools such as Reaper and Ableton Live. On the technical part, I can use both Fmod and Wwise, before getting my hands into game engines. I also do a bit of coding so I can smoothly work with fellow programmers.</p>
 							<p>Beside that I am also part of a game audio collective that I co-founded with fellow sound designers which is called Game Audio France (GAFR, pun intended). We started as 4 people early 2017 and we are now one of the biggest french game audio collective doing monthly meet up and sharing knowledge. I am also a modular synthesizer and tea enthusiast!</p>
-							<img src="./img/logo-GL-nav.png" alt="logo Guillaume Lavrilleux">
+							<img src="./img/logo-GL-nav.webp" alt="logo Guillaume Lavrilleux">
 							<div class="d-flex flex-row justify-content-center align-items-center">
 								<a href="https://twitter.com/GLavrilleux" target="_blank"><i class="fab fa-twitter"></i></a>
 								<a href="https://fr.linkedin.com/in/guillaumelavrilleux" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -213,7 +213,7 @@
 				<div class="carousel-inner">
 				  <div class="carousel-item active">
 					  <div class="d-flex flex-row orientation">
-						<img src="./img/Lucine.png" class="d-block img-fluid img-luc" alt="Lucine">
+						<img src="./img/Lucine.webp" class="d-block img-fluid img-luc" alt="Lucine">
 						<p class="lucine">Lucine aims to help people who suffer from chronic pain with audio and
 						visual stimulations.
 						My work at Lucine consisted of designing audio environment
@@ -236,7 +236,7 @@
 				  </div>
 				  <div class="carousel-item">
 					<div class="d-flex flex-row orientation">
-						<img src="./img/Cap-Sciences.png" class="d-block img-fluid img-cap" alt="Cap Sciences">
+						<img src="./img/Cap-Sciences.webp" class="d-block img-fluid img-cap" alt="Cap Sciences">
 						<p class="capsciences">Défi Curieux! is an interactive experience that took place in Bordeaux, France, 
 						at Cap Sciences. The experience is a mix between a TV show and a mobile app.
 						Users interact through a mobile phone to play a competitive game. The game needed
@@ -251,7 +251,7 @@
 				  </div>
 				  <div class="carousel-item paysage">
 					<div style="height: 373px">
-						<img src="./img/eduMedia.png" class="d-block img-fluid" alt="eduMedia">
+						<img src="./img/eduMedia.webp" class="d-block img-fluid" alt="eduMedia">
 						<p class="description">Alec is an educational video game, played on web browers, for PC and tablets.
 							I worked under the supervision of their team and artistic director to create
 							ambients, SFX and record foleys.</p>
@@ -352,7 +352,7 @@
 				</div>
 			</div>
 			<div class="copyright">
-				<p>© 2020 - www.guillaumelavrilleux.com - Sound Designer | Made by : <a href="https://www.arnaud-tessier.fr" target="_blank" class="dev">Arnaud Tessier<img class="dev-img" src="./img/logo-AT-mini.png" alt="Arnaud Tessier"></a></p>
+				<p>© 2020 - www.guillaumelavrilleux.com - Sound Designer | Made by : <a href="https://www.arnaud-tessier.fr" target="_blank" class="dev">Arnaud Tessier<img class="dev-img" src="./img/logo-AT-mini.webp" alt="Arnaud Tessier"></a></p>
 			</div>
 		</div>
 		</footer>
