--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="description" content="Guillaume Lavrilleux, Sound Designer">
     <meta name="category" content="Lavrilleux, Audio, Sound, Design, Games, Bordeaux, France">
     <meta name="keywords" content="Lavrilleux, Audio, Sound, Design, Games, Bordeaux, France">
-    <meta name="publisher" content="Arnaud TESSIER, http://www.arnaud-tessier.fr">
+    <meta name="publisher" content="Arnaud TESSIER, https://www.arnaud-tessier.fr">
 
     <!-- Titre + Favicon -->    
     <link rel="icon" type="image/png" href="./img/logo-favicon.png">    
