--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 					</div>
 				  </div>
 				  <div class="carousel-item paysage">
-					<div style="height: 373px">
+					<div>
 						<img src="./img/eduMedia.png" class="d-block img-fluid" alt="eduMedia">
 						<p class="description">Alec is an educational video game, played on web browers, for PC and tablets.
 							I worked under the supervision of their team and artistic director to create
