--- a/index.html
+++ b/index.html
@@ -14,7 +14,27 @@
     <meta name="description" content="Guillaume Lavrilleux, Sound Designer">
     <meta name="category" content="Lavrilleux, Audio, Sound, Design, Games, Bordeaux, France">
     <meta name="keywords" content="Lavrilleux, Audio, Sound, Design, Games, Bordeaux, France">
-    <meta name="publisher" content="Arnaud TESSIER, https://www.arnaud-tessier.fr">
+	<meta name="publisher" content="Arnaud TESSIER, https://www.arnaud-tessier.fr">
+	
+	<!-- SOCIAL NETWORKS CARDS -->
+	<!-- Primary Meta Tags -->
+	<title>Guillaume Lavrilleux | Sound Designer</title>
+	<meta name="title" content="Guillaume Lavrilleux | Sound Designer">
+	<meta name="description" content="Guillaume Lavrilleux, Sound Designer">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://www.guillaumelavrilleux.com/">
+	<meta property="og:title" content="Guillaume Lavrilleux | Sound Designer">
+	<meta property="og:description" content="Guillaume Lavrilleux, Sound Designer">
+	<meta property="og:image" content="https://www.guillaumelavrilleux.com/img/logo-GL.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://www.guillaumelavrilleux.com/">
+	<meta property="twitter:title" content="Guillaume Lavrilleux | Sound Designer">
+	<meta property="twitter:description" content="Guillaume Lavrilleux, Sound Designer">
+	<meta property="twitter:image" content="https://www.guillaumelavrilleux.com/img/logo-GL.png">
 
     <!-- Titre + Favicon -->    
     <link rel="icon" type="image/png" href="./img/logo-favicon.png">    
