--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 	<meta property="og:url" content="https://www.guillaumelavrilleux.com/">
 	<meta property="og:title" content="Guillaume Lavrilleux | Sound Designer">
 	<meta property="og:description" content="Guillaume Lavrilleux, Sound Designer">
-	<meta property="og:image" content="https://www.guillaumelavrilleux.com/img/logo-GL.png">
+	<meta property="og:image" content="https://www.guillaumelavrilleux.com/img/guillaume-lavrilleux-cover.jpg">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://www.guillaumelavrilleux.com/">
 	<meta property="twitter:title" content="Guillaume Lavrilleux | Sound Designer">
 	<meta property="twitter:description" content="Guillaume Lavrilleux, Sound Designer">
-	<meta property="twitter:image" content="https://www.guillaumelavrilleux.com/img/logo-GL.png">
+	<meta property="twitter:image" content="https://www.guillaumelavrilleux.com/img/guillaume-lavrilleux-cover.jpg">
 
     <!-- Titre + Favicon -->    
     <link rel="icon" type="image/png" href="./img/logo-favicon.png">    
